[metadata]
name = darkdetect
version = attr: darkdetect.__version__
author = Alberto Sottile
author_email = asottile@gmail.com
url = http://github.com/albertosottile/darkdetect
download_url = http://github.com/albertosottile/darkdetect/releases
description = Detect OS Dark Mode from Python
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_files = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows :: Windows 10
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.2
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >= 2
packages = find:

[bdist_wheel]
universal = 1
